Small fix to modal spacing, and heading style

--- a/less/type.less
+++ b/less/type.less
@@ -53,6 +53,7 @@ h6, .h6 {
   margin-top: 0;
   margin-bottom: 0;
   font-weight: 800;
+  font-family: @font-family-base;
 
   small,
   .small {
